docs: sync 01-06 design docs with Phase 1 review fixes
Co-Authored-By: Claude <noreply@anthropic.com>